Fixed collapsed webcam region navbar issue

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -449,6 +449,9 @@ body, html {
   position: fixed;
   width: 100%;
   z-index: 10; }
+  .navbar .navbar-toggle {
+    float: left;
+    margin-left: 20px; }
 
 .navbar-default {
   background-color: #DCA724;
