--- a/app/styles/sass/2-modules/webcams.sass
+++ b/app/styles/sass/2-modules/webcams.sass
@@ -3,6 +3,10 @@
 	width: 100%
 	z-index: 10
 
+	.navbar-toggle
+		float: left 	/* Because we made navbar fixed with 100% width, otherwise button did not show on screen. */
+		margin-left: 20px
+
 .navbar-default 
 	background-color: #DCA724
 	border-color: silver
